[workspace]
members = [
    "heroinn",
    "heroinn_client",
    "heroinn_core",
	"heroinn_util",
	"th3rd/heroinn_ftp"
]

[profile.release.package.heroinn_client]
strip = true
debug = false
opt-level = "z"
codegen-units = 1

[profile.release]
lto = true
strip = true
debug = false
opt-level = "z"
codegen-units = 1


# RUSTFLAGS='-C target-feature=+crt-static' proxychains4  cargo build --package heroinn_client --release --target x86_64-unknown-linux-gnu